2005-05-12  Roman Kennke  <roman@kennke.org>

	* examples/gnu/classpath/examples/swing/Demo.java:
	Added examples for JEditorPane and JTree.

2005-05-11  Roman Kennke  <roman@kennke.org>

	* javax/swing/plaf/basic/DefaultMenuLayout.java:
	Added this class.
	* javax/swing/plaf/basic/BasicPopupMenuUI.java
	(installUI): Use the new DefaultMenuLayout instead of GridBagLayout.

2005-05-11  Roman Kennke  <roman@kennke.org>

	* javax/swing/AbstractCellEditor.java
	(constructor): Implemented.
	(isCellEditable): Implemented.
	(shouldSelectCell): Implemented.
	(stopCellEditing): Implemented.
	(cancelCellEditing): Implemented.

2005-05-11  Roman Kennke  <roman@kennke.org>

	* javax/swing/AbstractCellEditor.java:
	Documented this class.

2005-05-11  Roman Kennke  <roman@kennke.org>

	* javax/swing/AbstractCellEditor.java:
	Reformatted this file to our coding style.

2005-05-11  Roman Kennke  <roman@kennke.org>

	* javax/swing/plaf/basic/BasicOptionPaneUI.java
	(createSeparator): Implemented. Returns a vertical separator with
	a height of 17 pixels as recommended in the book Java Look & Feel
	Design Guidelines.
	(installComponents): Added an empty border around the dialog.

2005-05-11  Roman Kennke  <roman@kennke.org>

	* javax/swing/text/View.java
	(insertUpdate) Removed a debug println statement.

2005-05-11  Roman Kennke  <roman@kennke.org>

	* javax/swing/plaf/basic/BasicTextUI.java
	(RootView.insertUpdate): Added. Forwards the update to the real
	root view.
	(RootView.removeUpdate): Added. Forwards the update to the real
	root view.
	(RootView.changedUpdate): Added. Forwards the update to the real
	root view.
	(DocumentHandler): Added. Receives DocumentEvents and forwards
	them to the corresponding View methods.
	(installDocumentListeners): Installs Document listeners on the
	text component's document model.
	* javax/swing/plaf/text/FieldView.java
	(adjustAllocation): Added. Adjusts the view area so that the