@@ -1,6 +1,13 @@
 2005-05-12  Roman Kennke  <roman@kennke.org>
 
 	* examples/gnu/classpath/examples/swing/Demo.java:
+	Added Examples menu to menu bar.
+	Slightly changed the layout of the main panel so that an overlenghty
+	button panel at the bottom is displayed in a useful way.
+
+2005-05-12  Roman Kennke  <roman@kennke.org>
+
+	* examples/gnu/classpath/examples/swing/Demo.java:
 	Added examples for JEditorPane and JTree.
 
 2005-05-11  Roman Kennke  <roman@kennke.org>
